<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="false"
    app:cardElevation="4dp"
    android:layout_margin="5dp"
    >

    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_profile_selected"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:textColor="@color/black"
                android:id="@+id/tv_expense_name"
                android:layout_gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:gravity="right"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight=".4"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/tv_date"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_amount"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/tv_amount"
                />

        </LinearLayout>





    </LinearLayout>

        <View
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_lite"/>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/rounded_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:padding="5dp"
                android:textColor="@color/blue"
                android:id="@+id/tv_expense_type"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout

            android:gravity="right"
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:layout_weight=".4"
            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/rounded_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:padding="5dp"
                android:textAllCaps="true"
                android:layout_marginRight="5dp"
                android:textColor="@color/blue"
                android:id="@+id/tv_expense_cur"
                android:layout_gravity="center"
                />


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_launcher"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:scaleType="fitXY"
                android:id="@+id/iv_recipt"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"

                />

        </LinearLayout>


    </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>