<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.expenseDetail.ExpenseDetailedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merchant"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/tv_merchantt"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="right">
                <com.google.android.material.imageview.ShapeableImageView
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:scaleType="fitXY"
                    android:id="@+id/iv_exp_detailed"/>
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_lite"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/tv_exp_total"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="right">
                <TextView
                    android:background="@drawable/rounded_shape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textColor="@color/blue"
                    android:padding="5dp"
                    android:id="@+id/tv_expense_cur"/>
            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_lite"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/tv_exp_date"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray_lite"/>
            </LinearLayout>


            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:gravity="left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="14sp"/>


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:id="@+id/tv_exp_category"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray_lite"/>
            </LinearLayout>



        </LinearLayout>


        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/description_optional"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_shape_gray"
            android:id="@+id/tv_exp_description"/>




    </LinearLayout>

</FrameLayout>